--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "1.18.3",
-    "express": "4.16.2"
+    "express": "4.16.2",
+    "md5": "^2.2.1",
+    "mongoose": "^5.9.3"
   },
   "devDependencies": {
     "@types/express": "4.16.1",
     "@types/jest": "24.0.12",
+    "@types/mongoose": "^5.7.3",
     "@types/node": "12.0.0",
     "jest": "24.7.1",
     "nodemon": "^2.0.2",
