--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "digitalframe_s",
+  "name": "node-mini-app",
   "version": "2.3.0",
-  "description": "digitalFrame program server",
-  "main": "dist/appServer.js",
+  "description": "extreamly minimal node js server (express, ts, jest, db)",
+  "main": "dist/server.js",
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "heroku-postbuild": "webpack",
-    "production": "node dist/appServer.bundle.js",
+    "production": "node dist/server.bundle.js",
     "prestart": "npm run build",
-    "start": "ts-node src/appServer.ts",
-    "dev": "nodemon --inspect src/appServer.ts",
+    "start": "ts-node src/server.ts",
+    "dev": "nodemon --inspect src/server.ts",
     "test": "jest"
   },
   "author": "Noam Aghai",
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "1.18.3",
     "express": "4.16.2",
+    "firebase-admin": "^8.9.2",
     "md5": "^2.2.1",
     "mongoose": "^5.9.3"
   },
