--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "1.18.3",
+    "dotenv": "^8.2.0",
     "express": "4.16.2",
     "firebase-admin": "^8.9.2",
     "md5": "^2.2.1",
