--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
     "name": "mini-node-ts",
     "description": "Super minimal node.js (typescript) application",
     "repository": "https://github.com/agnoam/mini-node-ts",
-    "logo": "http://blog.mycode.website/wp-content/uploads/2019/04/000-sm1.png",
+    "logo": "https://node-js-sample.herokuapp.com/node.png",
     "keywords": ["node", "typescript", "express", "mongoose", "mongodb", "firebase-admin", "template", "jest"]
   }
