--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "ts-loader": "6.0.4",
     "ts-node": "^8.5.2",
     "tslint": "5.16.0",
-    "typescript": "3.5.3",
+    "typescript": "^3.9.4",
     "webpack": "4.28.4",
     "webpack-cli": "3.3.2",
     "webpack-node-externals": "1.7.2"
