--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-mini-app",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "extreamly minimal node js server (express, ts, jest, db)",
   "main": "dist/server.js",
   "scripts": {
@@ -21,7 +21,8 @@
     "express": "4.16.2",
     "firebase-admin": "^8.9.2",
     "md5": "^2.2.1",
-    "mongoose": "^5.9.3"
+    "mongoose": "^5.9.3",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@types/express": "4.16.1",
@@ -29,6 +30,7 @@
     "@types/md5": "^2.2.0",
     "@types/mongoose": "^5.7.3",
     "@types/node": "12.0.0",
+    "@types/socket.io": "^2.1.10",
     "jest": "24.7.1",
     "nodemon": "^2.0.2",
     "ts-jest": "24.0.2",
