--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
     "name": "mini-node-ts",
     "description": "Super minimal node.js (typescript) application",
     "repository": "https://github.com/agnoam/mini-node-ts",
-    "logo": "https://node-js-sample.herokuapp.com/node.png",
+    "logo": "https://https://github.com/agnoam/mini-node-ts/tree/master/github_online_assets(delete locally)/heroku_process_pictures/node-js.png",
     "keywords": ["node", "typescript", "express", "mongoose", "mongodb", "firebase-admin", "template", "jest"]
   }
