--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-mini-app",
   "version": "2.4.0",
-  "description": "extreamly minimal node js server (express, ts, jest, db)",
+  "description": "Extreamly minimal node js server (express, ts, jest, db, swagger)",
   "main": "dist/server.js",
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
@@ -20,17 +20,21 @@
     "dotenv": "^8.2.0",
     "express": "4.16.2",
     "firebase-admin": "^8.9.2",
+    "js-yaml": "^4.0.0",
     "md5": "^2.2.1",
     "mongoose": "^5.9.3",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@types/express": "4.16.1",
     "@types/jest": "24.0.12",
+    "@types/js-yaml": "^4.0.0",
     "@types/md5": "^2.2.0",
     "@types/mongoose": "^5.7.3",
     "@types/node": "12.0.0",
     "@types/socket.io": "^2.1.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "jest": "24.7.1",
     "nodemon": "^2.0.2",
     "ts-jest": "24.0.2",
