Removed deprecated body-parser package

--- a/package.json
+++ b/package.json
@@ -16,32 +16,31 @@
   "author": "Noam Aghai",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "1.18.3",
-    "dotenv": "^8.2.0",
-    "express": "4.16.2",
-    "firebase-admin": "^8.9.2",
-    "js-yaml": "^4.0.0",
-    "md5": "^2.2.1",
-    "mongoose": "^5.9.3",
-    "socket.io": "^2.4.0",
-    "swagger-ui-express": "^4.1.6"
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "firebase-admin": "8.9.2",
+    "js-yaml": "4.0.0",
+    "md5": "2.2.1",
+    "mongoose": "5.9.3",
+    "socket.io": "2.4.0",
+    "swagger-ui-express": "4.1.6"
   },
   "devDependencies": {
-    "@types/express": "4.16.1",
+    "@types/express": "^4.17.11",
     "@types/jest": "24.0.12",
-    "@types/js-yaml": "^4.0.0",
-    "@types/md5": "^2.2.0",
-    "@types/mongoose": "^5.7.3",
+    "@types/js-yaml": "4.0.0",
+    "@types/md5": "2.2.0",
+    "@types/mongoose": "5.7.3",
     "@types/node": "12.0.0",
-    "@types/socket.io": "^2.1.10",
-    "@types/swagger-ui-express": "^4.1.2",
+    "@types/socket.io": "2.1.10",
+    "@types/swagger-ui-express": "4.1.2",
     "jest": "24.7.1",
-    "nodemon": "^2.0.2",
+    "nodemon": "2.0.2",
     "ts-jest": "24.0.2",
     "ts-loader": "6.0.4",
-    "ts-node": "^8.5.2",
+    "ts-node": "8.5.2",
     "tslint": "5.16.0",
-    "typescript": "^3.9.4",
+    "typescript": "3.9.4",
     "webpack": "4.28.4",
     "webpack-cli": "3.3.2",
     "webpack-node-externals": "1.7.2"
