Added datalayer file into the component

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=exampleURI
+DEFUALT_PROFILE_IMAGE_URL=https://cdn.business2community.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png
