* Added elasticsearch * Fixed problems with Dockerfile * Added probe server, apm , redis, dependency injection * Added test

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGODB_URI=exampleURI
 DEFUALT_PROFILE_IMAGE_URL=https://cdn.business2community.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png
+ELASTICSEARCH_URI=http://10.0.0.62:9200
+ELASTIC_APM_SERVER_URL=http://localhost:30000
