--- a/package.json
+++ b/package.json
@@ -20,14 +20,25 @@
     "@types/serve-static": "1.13.9"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.17.0",
+    "@godaddy/terminus": "^4.9.0",
+    "add": "^2.0.6",
     "dotenv": "8.2.0",
+    "elastic-apm-node": "^3.19.0",
     "express": "4.17.1",
     "firebase-admin": "8.9.2",
+    "inversify": "^5.1.1",
     "js-yaml": "4.0.0",
     "md5": "2.2.1",
     "mongoose": "5.9.3",
+    "redis": "^3.1.2",
+    "reflect-metadata": "^0.1.13",
     "socket.io": "2.4.0",
-    "swagger-ui-express": "4.1.6"
+    "swagger-tools": "^0.10.4",
+    "swagger-ui-express": "4.1.6",
+    "winston": "^3.3.3",
+    "winston-format-debug": "^1.1.0",
+    "yarn": "^1.22.11"
   },
   "devDependencies": {
     "@types/express": "4.17.11",
@@ -37,11 +48,15 @@
     "@types/md5": "2.2.0",
     "@types/mongoose": "5.7.3",
     "@types/node": "12.0.0",
+    "@types/redis": "^2.8.31",
     "@types/socket.io": "2.1.10",
+    "@types/supertest": "^2.0.11",
+    "@types/swagger-tools": "^0.10.7",
     "@types/swagger-ui-express": "4.1.2",
     "eslint": "^7.30.0",
     "jest": "24.7.1",
     "nodemon": "2.0.2",
+    "supertest": "^6.2.2",
     "ts-jest": "24.0.2",
     "ts-loader": "6.0.4",
     "ts-node": "8.5.2",
