--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "devDependencies": {
     "@types/express": "4.17.11",
     "@types/express-serve-static-core": "4.17.0",
-    "@types/jest": "24.0.12",
+    "@types/jest": "^27.4.0",
     "@types/js-yaml": "4.0.0",
     "@types/md5": "2.2.0",
     "@types/mongoose": "5.7.3",
@@ -54,10 +54,10 @@
     "@types/swagger-tools": "^0.10.7",
     "@types/swagger-ui-express": "4.1.2",
     "eslint": "^7.30.0",
-    "jest": "24.7.1",
+    "jest": "^27.5.1",
     "nodemon": "2.0.2",
     "supertest": "^6.2.2",
-    "ts-jest": "24.0.2",
+    "ts-jest": "^27.1.3",
     "ts-loader": "6.0.4",
     "ts-node": "8.5.2",
     "tslint": "5.16.0",
