--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "prebuild": "eslint --fix",
     "build": "tsc && yarn copy-files && webpack",
     "copy-files": "cp -avr ./src/api ./dist/api",
-    "heroku-postbuild": "webpack",
     "production": "node dist/code_bundle/server.bundle.js",
-    "prestart": "npm run build",
     "start": "ts-node src/server.ts",
     "dev": "nodemon --inspect src/server.ts",
     "test": "jest"
@@ -17,12 +15,11 @@
   "author": "Noam Aghai",
   "license": "ISC",
   "resolutions": {
-    "@types/serve-static": "1.13.9"
+    "@types/serve-static": ".13.9"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^7.17.0",
+    "@elastic/elasticsearch": "7.16.0",
     "@godaddy/terminus": "^4.9.0",
-    "add": "^2.0.6",
     "dotenv": "8.2.0",
     "elastic-apm-node": "^3.19.0",
     "express": "4.17.1",
@@ -43,11 +40,11 @@
   "devDependencies": {
     "@types/express": "4.17.11",
     "@types/express-serve-static-core": "4.17.0",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "27.4.0",
     "@types/js-yaml": "4.0.0",
     "@types/md5": "2.2.0",
     "@types/mongoose": "5.7.3",
-    "@types/node": "12.0.0",
+    "@types/node": "14.18.11",
     "@types/redis": "^2.8.31",
     "@types/socket.io": "2.1.10",
     "@types/supertest": "^2.0.11",
@@ -60,8 +57,8 @@
     "ts-jest": "^27.1.3",
     "ts-loader": "6.0.4",
     "ts-node": "8.5.2",
-    "tslint": "5.16.0",
-    "typescript": "3.9.4",
+    "tslint": "6.1.3",
+    "typescript": "4.5.5",
     "webpack": "4.28.4",
     "webpack-cli": "3.3.2",
     "webpack-node-externals": "1.7.2"
