--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     //     "src/test/*"
     // ],
     "include": [
-        "src/**/*"
-, "test"    ]
+        "src/**/*", 
+        // "test/**/*"
+    ]
 }
