--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@godaddy/terminus": "^4.9.0",
     "dotenv": "8.2.0",
     "elastic-apm-node": "^3.19.0",
+    "etcd3": "^1.1.0",
     "express": "4.17.1",
     "firebase-admin": "8.9.2",
     "inversify": "^5.1.1",
