Fixed Dockerfile Updated apm package Added `Transaction` and `Span` types Enabled `skipLibCheck` in tsconfig for ignoring the `etcd3` build failure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,17 +12,14 @@
         "types": ["reflect-metadata", "jest", "node"],
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
+        "skipLibCheck": true,
         "paths": {
             "*": [
                 "node_modules/*"
             ]
         }
     },
-    // "exclude": [
-    //     "src/test/*"
-    // ],
     "include": [
-        "src/**/*", 
-        // "test/**/*"
+        "src/**/*"
     ]
 }
