--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@elastic/elasticsearch": "7.16.0",
     "@godaddy/terminus": "^4.9.0",
     "dotenv": "8.2.0",
-    "elastic-apm-node": "^3.19.0",
+    "elastic-apm-node": "^3.29.0",
     "etcd3": "^1.1.0",
     "express": "4.17.1",
     "firebase-admin": "8.9.2",
@@ -34,8 +34,9 @@
     "socket.io": "2.4.0",
     "swagger-tools": "^0.10.4",
     "swagger-ui-express": "4.1.6",
-    "winston": "^3.3.3",
-    "winston-format-debug": "^1.1.0",
+    "winston": "^3.6.0",
+    "winston-elasticsearch": "^0.16.1",
+    "winston-format-debug": "^1.3.1",
     "yarn": "^1.22.11"
   },
   "devDependencies": {
@@ -60,8 +61,8 @@
     "ts-node": "8.5.2",
     "tslint": "6.1.3",
     "typescript": "4.5.5",
-    "webpack": "4.28.4",
-    "webpack-cli": "3.3.2",
-    "webpack-node-externals": "1.7.2"
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-node-externals": "^3.0.0"
   }
 }
