Added morgan Fixed print of extra `{}` in logger console print

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "js-yaml": "4.0.0",
     "md5": "2.2.1",
     "mongoose": "5.9.3",
+    "morgan": "^1.10.0",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "socket.io": "2.4.0",
@@ -45,6 +46,7 @@
     "@types/js-yaml": "4.0.0",
     "@types/md5": "2.2.0",
     "@types/mongoose": "5.7.3",
+    "@types/morgan": "^1.9.3",
     "@types/node": "14.18.11",
     "@types/redis": "^2.8.31",
     "@types/socket.io": "2.1.10",
