--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGODB_URI=exampleURI
-ELASTICSEARCH_URI=http://10.0.0.62:9200
-ELASTIC_APM_SERVER_URL=http://localhost:30000
+ELASTICSEARCH_URI=http://192.168.0.100:9200
+ELASTIC_APM_SERVER_URL=http://192.168.0.100:8200
 ETCD_SERVICE_NAME=mini-node-ts
