Updated .env Changed initialization of ETCDConfig

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGODB_URI=exampleURI
 ELASTICSEARCH_URI=http://192.168.0.100:9200
 ELASTIC_APM_SERVER_URL=http://192.168.0.100:8200
 ETCD_SERVICE_NAME=mini-node-ts
+ETCD_HOST=http://localhost:5000
