--- a/package.json
+++ b/package.json
@@ -30,11 +30,10 @@
     "md5": "2.2.1",
     "mongoose": "5.9.3",
     "morgan": "^1.10.0",
+    "oas-tools": "^2.2.1",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "socket.io": "2.4.0",
-    "swagger-tools": "^0.10.4",
-    "swagger-ui-express": "4.1.6",
     "winston": "^3.6.0",
     "winston-elasticsearch": "^0.16.1",
     "yarn": "^1.22.11"
