Added templateVersion to `package.json`

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGODB_URI=exampleURI
-ELASTICSEARCH_URI=http://192.168.0.100:9200
-ELASTIC_APM_SERVER_URL=http://192.168.0.100:8200
+MONGODB_URI=<mongo-uri>
+ELASTICSEARCH_URI=http://<elasticsearch-host>:<port>
+ELASTIC_APM_SERVER_URL=http://<apm-server-host>:<port>
 ETCD_SERVICE_NAME=mini-node-ts
-ETCD_HOST=http://localhost:5000
+ETCD_HOST=http://<etcd-host>:<port>
