--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/dist/code_bundle/server.bundle.js",
+            "program": "${workspaceFolder}/dist/src/server.js",
             "preLaunchTask": "build: production",
             "outputCapture": "std",
             "outFiles": [
